[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kens_utils"
description = "A collection of utilities for the Ken's Discord bots."
readme = { file = "index.rst", content-type = "text/x-rst" }
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Ken-Miles" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[project.optional-dependencies]
voice = ["PyNaCl>=1.3.0,<1.6"]
docs = [
    "sphinx==4.4.0",
    "sphinxcontrib_trio==1.1.2",
    # TODO: bump these when migrating to a newer Sphinx version
    "sphinxcontrib-websupport==1.2.4",
    "sphinxcontrib-applehelp==1.0.4",
    "sphinxcontrib-devhelp==1.0.2",
    "sphinxcontrib-htmlhelp==2.0.1",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==1.0.3",
    "sphinxcontrib-serializinghtml==1.1.5",
    "typing-extensions>=4.3,<5",
    "sphinx-inline-tabs==2023.4.21",
]
speed = [
    "orjson>=3.5.4",
    "aiodns>=1.1; sys_platform != 'win32'",
    "Brotli",
    "cchardet==2.1.7; python_version < '3.10'",
    "zstandard>=0.23.0"
]
test = [
    "coverage[toml]",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "pytest-order",
    "pytest==8.4.2",
    "typing-extensions>=4.3,<5",
    "tzdata; sys_platform == 'win32'",
]

[tool.setuptools]
packages = [
    "src",
]
include-package-data = true

[tool.black]
line-length = 125
skip-string-normalization = true

[tool.ruff]
line-length = 125

[tool.ruff.format]
line-ending = "lf"
quote-style = "single"

[tool.isort]
profile = "black"
combine_as_imports = true
combine_star = true
line_length = 125

[tool.pyright]
include = [
    "src",
]
exclude = [
    "**/__pycache__",
    "build",
    "dist",
    "docs",
]
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnusedImport = "error"
pythonVersion = "3.10"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--import-mode=importlib",
    #"-ra -q"
]
pythonpath = [
    "src",
]
testpaths = [
    "tests",
]
asyncio_mode = "strict"
